--- a/.drone.yaml
+++ b/.drone.yaml
@@ -8,7 +8,7 @@ steps:
     commands:
       - mvn clean package -DskipTests
     when:
-      event: [push, tag, custom]  # ← добавил custom
+      event: [push, tag, custom]
 
   - name: copy-jar
     image: appleboy/drone-scp
@@ -16,15 +16,16 @@ steps:
       host:
         from_secret: ssh_host
       username:
-        from_secret: ssh_username
-      key:
-        from_secret: ssh_key
+        from_secret: ssh_user
+      password:
+        from_secret: ssh_password
       port: 22
       target: /opt/app/
       source:
         - target/*.jar
+      strip_components: 0
     when:
-      event: [push, tag, custom]  # ← добавил custom
+      event: [push, tag, custom]
     depends_on: [build]
 
   - name: deploy-and-run
@@ -33,24 +34,28 @@ steps:
       host:
         from_secret: ssh_host
       username:
-        from_secret: ssh_username
-      key:
-        from_secret: ssh_key
+        from_secret: ssh_user
+      password:
+        from_secret: ssh_password
       port: 22
       script:
         - cd /opt/app
-        - pkill -f "java -jar.*viewing" || true
-        - sleep 5
+        - echo "Stopping existing application..."
+        - pkill -f "java -jar" || true
+        - sleep 3
         - mkdir -p models logs
         - JAR_FILE=$(ls -t *.jar | head -1)
         - echo "Starting application: $JAR_FILE"
         - nohup java -jar $JAR_FILE --server.port=2062 > logs/app.log 2>&1 &
+        - echo "Waiting for application to start..."
         - sleep 10
-        - ps aux | grep java
-        - tail -30 logs/app.log
-        - echo "Deployment completed!"
+        - echo "Application status:"
+        - ps aux | grep java | grep -v grep
+        - echo "Recent logs:"
+        - tail -20 logs/app.log
+        - echo "Deployment completed successfully!"
     when:
-      event: [push, tag, custom]  # ← добавил custom
+      event: [push, tag, custom]
     depends_on: [copy-jar]
 
 trigger:
@@ -60,4 +65,4 @@ trigger:
   event:
     - push
     - tag
-    - custom  # ← добавил custom
+    - custom
