--- a/.drone.yaml
+++ b/.drone.yaml
@@ -41,17 +41,58 @@ steps:
       port: 22
       script:
         - |
-          echo "=== DEBUGGING APPLICATION ==="
+          echo "=== DEPLOYING APPLICATION ==="
           cd /opt/app
           
-          # Останавливаем всё
-          pkill -9 -f java || true
-          sleep 3
+          # Останавливаем существующее приложение
+          echo "Stopping any existing application..."
+          pkill -f "java.*ar-webapp" || true
+          sleep 5
           
-          # Запускаем приложение НАПРЯМУЮ (не в фоне) чтобы увидеть ошибки
-          echo "Starting application in foreground to see errors..."
-          java -Xmx512m -jar ar-webapp-1.0.0.jar --server.port=2062
+          # Проверяем, что JAR файл существует
+          echo "Checking JAR file..."
+          ls -la *.jar
           
-          # Эта команда выполнится только если приложение упадет
-          echo "=== Application exited with code: $? ==="
+          # Запускаем приложение в фоновом режиме с логированием
+          echo "Starting application in background..."
+          nohup java -Xmx512m -jar *.jar --server.port=2062 > application.log 2>&1 &
+          
+          # Сохраняем PID для возможного последующего использования
+          echo $! > application.pid
+          
+          # Ждем запуска приложения
+          echo "Waiting for application to start..."
+          sleep 15
+          
+          # Проверяем, что процесс запущен
+          echo "Checking if application is running..."
+          if ps -p $(cat application.pid) > /dev/null; then
+            echo "✅ Application is running with PID: $(cat application.pid)"
+          else
+            echo "❌ Application failed to start"
+            echo "=== Application log ==="
+            cat application.log
+            exit 1
+          fi
+          
+          # Проверяем, что порт слушается
+          echo "Checking if port 2062 is listening..."
+          if netstat -tulpn | grep 2062; then
+            echo "✅ Port 2062 is listening"
+          else
+            echo "❌ Port 2062 is not listening"
+            exit 1
+          fi
+          
+          # Проверяем HTTP доступность (с таймаутом)
+          echo "Testing HTTP access..."
+          if curl -f --connect-timeout 10 http://localhost:2062/; then
+            echo "✅ Application is responding to HTTP requests"
+          else
+            echo "⚠️ Application started but HTTP check failed"
+            echo "=== Application log ==="
+            tail -50 application.log
+          fi
+          
+          echo "=== DEPLOYMENT COMPLETED SUCCESSFULLY ==="
     depends_on: [copy-jar]
