--- a/.drone.yaml
+++ b/.drone.yaml
@@ -11,7 +11,7 @@ steps:
   - name: build-jar
     image: maven:3.9.8-eclipse-temurin-21
     commands:
-      - cd ${DRONE_WORKSPACE}
+      - cd /drone/src
       - mvn clean package -DskipTests
 
   - name: copy-files
