--- a/.drone.yaml
+++ b/.drone.yaml
@@ -35,5 +35,7 @@ steps:
           cd /opt/app
           docker build -t ar-webapp:1.1.0 .
           docker stop ar-webapp:1.1.0 || true
+          sleep 5
           docker rm ar-webapp:1.1.0 || true
+          sleep 5
           docker run -d --name ar-webapp -p 2062:2062 ar-webapp:1.1.0
