--- a/.drone.yaml
+++ b/.drone.yaml
@@ -38,4 +38,4 @@ steps:
           sleep 5
           docker rm ar-webapp:1.1.0 || true
           sleep 5
-          docker run -d --name arwebapp -p 2062:2062 ar-webapp:1.1.0
+          docker run -d --name app -p 3062:3062 ar-webapp:1.1.0
